Added in a sidebar that can be opened and closed.

--- a/frontend/public/site.css
+++ b/frontend/public/site.css
@@ -12,10 +12,11 @@
   }
   
   .mapContainer {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
+      position: absolute;
+      width: 100%;
+      top: 50px;
+      right: 0;
+      left: 0;
+      bottom: 0;
     
   }
