first implementation of marker

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,25 @@
     transform: rotate(360deg);
   }
 }
+.sidebarStyle {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 12px;
+  background-color: #404040;
+  color: #ffffff;
+  z-index: 1 !important;
+  padding: 6px;
+  font-weight: bold;
+}
+
+.mapContainer {
+    position: absolute;
+    width: 100%;
+    top: 50px;
+    right: 0;
+    left: 0;
+    bottom: 0;
+  
+}
