disabled the getlink button when link is not ready

--- a/frontend/src/components/Map/Mapbox.css
+++ b/frontend/src/components/Map/Mapbox.css
@@ -15,9 +15,9 @@
     border-radius: 15px;
     margin: .10rem;
     font-size: 0.85rem;
-    color: #030303;
+    /* color: #030303;
     background: #ffffff;
-    border: 1px solid #030303;
+    border: 1px solid #030303; */
     cursor: pointer;
     padding: 0.25rem 0.85rem;
 }
