Changed sidebar layout.

--- a/frontend/src/components/Layout/SidebarContent.css
+++ b/frontend/src/components/Layout/SidebarContent.css
@@ -1,139 +1,5 @@
-.contentContainer{
-    width: 100%;
-    height: 100%;
-}
-
-.rangeSelector{
-    position: absolute;
-    width: 80%;
-    height: 5%;
-    top: 2.5%;
-    left: 10%;
-}
-
-.newRange{
-    position: absolute;
-    width: 80%;
-    height: 5%;
-    top: 10%;
-    left: 10%;
-}
-
-.presets{
-    position: absolute;
-    width: 80%;
-    height: 5%;
-    top: 20%;
-    left: 10%;
-}
-
-.startDateContainer{
-    position: absolute;
-    height: 5%;
-    width: 100%;
-    top: 22.5%;
-}
-
-.startDateLabel{
-    position: absolute;
-    width: 12%;
-    left: 3%;
-}
-
-.startDate{
-    position: absolute;
-    width: 80%;
-    top: 85%;
-    left: 15%;
-}
-
-.endDateContainer{
-    position: absolute;
-    height: 5%;
-    width: 100%;
-    top: 30%;
-}
-
-.endDateLabel{
-    position: absolute;
-    width: 12%;
-    left: 3%;
-}
-
-.endDate{
-    position: absolute;
-    width: 80%;
-    top: 85%;
-    left: 15%;
-}
-
-.startTimeContainer{
-    position: absolute;
-    height: 5%;
-    width: 100%;
-    top: 38.5%;
-}
-
-.startTimeLabel{
-    position: absolute;
-    width: 12%;
-    left: 3%;
-}
-
-.startTime{
-    position: absolute;
-    width: 80%;
-    top: 85%;
-    left: 15%;
-}
-
-.endTimeContainer{
-    position: absolute;
-    height: 5%;
-    width: 100%;
-    top: 45.5%;
-}
-
-.endTimeLabel{
-    position: absolute;
-    width: 12%;
-    left: 3%;
-}
-
-.endTime{
-    position: absolute;
-    width: 80%;
-    top: 85%;
-    left: 15%;
-}
-
-.days{
-    position: absolute;
-    width: 80%;
-    height: 5%;
-    top: 55%;
-    left: 10%;
-}
-
-.holiday{
-    position: absolute;
-    top: 80%;
-    left: 10%;
-}
-
-.fileTypeContainer{
-    position: absolute;
-    top: 86%;
-    left: 10%;
-}
-
-.fileType{
-    left: 30%;
-}
-
-.go{
-    position: absolute;
-    top: 92%;
-    left: 30%;
-    font-size: 2rem;
+#sidebar-container{
+    margin-left: 20px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
