put reverse button and input box

--- a/frontend/src/components/Map/Mapbox.css
+++ b/frontend/src/components/Map/Mapbox.css
@@ -61,3 +61,14 @@
   cursor: pointer;
   padding: 0.25rem 0.85rem;
 }
+
+.seq{
+    position: fixed;
+    bottom: 140px;
+    right: 0;
+}
+.seq-button{
+    position: fixed;
+    bottom: 140px;
+    right: 0;
+}
