changed css to put mapbox attributes at lower layer

--- a/frontend/src/components/Map/Mapbox.css
+++ b/frontend/src/components/Map/Mapbox.css
@@ -8,6 +8,12 @@
     height: 250px;
 }
 
+.mapboxgl-control-container{
+    z-index: 1 !important;
+    position: absolute;
+    pointer-events: none;
+}
+
 #reverseSeq-button {
     position: absolute;
     left: 125px;
