dumb dynamic names

--- a/frontend/src/Sidebar/sidebar.css
+++ b/frontend/src/Sidebar/sidebar.css
@@ -1,3 +1,11 @@
 .sidebarContent {
     margin: 10px;
 }
+
+.corridorName {
+    font-style: italic;
+}
+
+.instructions {
+    font-weight: bold;
+}
