drop the math symbols
they only really made sense in my head anyway; probably just confusing to the user

--- a/frontend/src/Sidebar/sidebar.css
+++ b/frontend/src/Sidebar/sidebar.css
@@ -11,15 +11,11 @@
     border: 1px solid lightgrey;
     border-radius: 5px;
     padding: 5px;
+    margin-bottom: 8px;
 }
 
 .user-created-factor-container > * {
     margin: 5px 0;
-}
-
-.big-math-symbol {
-    text-align: center;
-    font-size: 2em;
 }
 
 .factor {
